[gd_scene load_steps=3 format=3 uid="uid://cbpyx6lxocq7v"]

[ext_resource type="Script" uid="uid://dsvfkkyibhuce" path="res://scenes/screens/difficulty/difficulty.gd" id="1_wh46q"]
[ext_resource type="FontFile" uid="uid://b5ef1nkej4i8q" path="res://resources/fonts/MotionControl-Bold.otf" id="1_yhgc5"]

[node name="Difficulty" type="Node2D"]
script = ExtResource("1_wh46q")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BackGround" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Easy" type="Button" parent="UI/CenterContainer/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yhgc5")
theme_override_font_sizes/font_size = 32
text = "EASY"

[node name="Medium" type="Button" parent="UI/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yhgc5")
theme_override_font_sizes/font_size = 32
text = "MEDIUM"

[node name="Hard" type="Button" parent="UI/CenterContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yhgc5")
theme_override_font_sizes/font_size = 32
text = "HARD"

[node name="Back" type="Button" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yhgc5")
theme_override_font_sizes/font_size = 32
text = "BACK"

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
